# fusion

./: .gitignore  LICENSE  LICENSE.md  README.md  correlations.ipynb  fusion-alternate.ipynb  fusion.ipynb  package-lock.json  pyproject.toml  requirements.txt  spotify_processing.ipynb
.github/: FUNDING.yml
analysis/: .gitignore  README.md  activity_watch_processing.ipynb  brain_activity_over_time.ipynb  correlations.ipynb  eeg.py  fusion.ipynb  google_calendar.ipynb  magicflow_analysis.ipynb  main.py  music_eeg.ipynb  neuro_analysis.ipynb  new_analysis.ipynb  oura_processing.ipynb  sleep_analysis_on_day.ipynb  spotify_processing.ipynb  statisticTrial.ipynb  stress_detector.ipynb
analysis_api/: .gitignore  README.md  animal_groups.txt  app.py  cocoa_pad.py  requirements.txt
analysis_server/: .gitignore  app.py  eeg.py  requirements.txt  server.py
app/: functions.js  index.html  main.js  package-lock.json  styles.css
blog/: index.html
dashboard/: README.md  main.py
data/: aw_data_grouped.csv  aw_data_grouped_nov_21.csv  correlations_pearson_over0point1.csv  correlations_spearman_over0point1.csv  neurotech_correlations_combined.csv  oura_cleaned.csv  oura_daily_summary_nov21.csv  productive_activity.csv  spotify_data_summary.csv  spotify_data_summary_nov21_weighted.csv
data-pipelines/: readme.md
desktop/: README.md  package-lock.json
frontend/: .env.example  .env.local  .env.production  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  README.md  next.config.js  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json
(+936 files in other folders)
