[tool.poetry]
name = "fusion"
version = "0.1.0"
description = "auto recording & custom insights on self"
authors = ["Ore Ogundipe <oreogundipe@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
brainflow = "^5.0.1"
pyqtgraph = "^0.12.4"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
